# stockhub-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: INDEX.md  TOOLS.md  cache-strategy.md  class-diagram.mermaid  development-status.md  error-model.md  expert-review-notes.md  referenced-repos.md  roadmap.md  skills-analysis.md  skills-to-market-data-mcp-mapping.md  system_design.md  v0.1-schema.md
docs/archive/: README.md  referenced-repos.md  skills-analysis.md  skills-to-stockhub-mapping.md
docs/design/: README.md  cache-strategy.md  error-model.md  expert-review-notes.md  schema-reference.md  sequence-diagram.mermaid  system_design.md
docs/tracking/: current-capabilities.md  development-status.md  roadmap.md
src/market_data_mcp/: __init__.py  config.py  enums.py  server.py
src/market_data_mcp/domain/: response_builder.py
src/market_data_mcp/domain/market/: calendar.py  session.py  timezone.py
src/market_data_mcp/domain/symbol/: normalizer.py  resolver.py
src/market_data_mcp/models/: common.py  enhance.py  etf.py  flow.py  history.py  research.py  search.py  source_status.py
src/market_data_mcp/services/: akshare_source.py  base.py  circuit_breaker.py  eastmoney_source.py  router.py  sina_source.py  tencent_source.py  yfinance_source.py
src/market_data_mcp/services/cache/: policy.py  store.py
src/market_data_mcp/tools/: batch.py  cache_control.py  cache_middleware.py  china_enhance.py  etf.py  fund.py  futures.py  history.py  indicators.py  northbound.py  price_limits.py  quote.py  research.py
src/market_data_mcp/utils/: logging.py
src/stockhub_mcp/: __init__.py  enums.py  server.py
src/stockhub_mcp/core/: pipeline.py
src/stockhub_mcp/domain/: response_builder.py
src/stockhub_mcp/domain/market/: calendar.py  session.py  timezone.py
src/stockhub_mcp/domain/symbol/: normalizer.py  resolver.py
src/stockhub_mcp/models/: batch.py  capital_flow.py  core.py  finance.py  fund.py  futures.py  indicators.py  quote.py  sector.py
src/stockhub_mcp/services/: akshare_source.py  base.py  circuit_breaker.py  eastmoney_source.py  efinance_source.py  router.py  sina_source.py  tencent_source.py  yfinance_source.py
src/stockhub_mcp/services/cache/: policy.py  store.py
src/stockhub_mcp/tools/: batch.py  cache_control.py  cache_middleware.py  china_enhance.py  etf.py  fund.py  futures.py  history.py  indicators.py  northbound.py  portfolio.py  price_limits.py  quick_analysis.py  quote.py  research.py  risk.py  valuation_percentile.py
src/stockhub_mcp/utils/: logging.py
tests/: test_cache.py  test_circuit_breaker.py  test_enums_config.py  test_integration.py  test_market_session.py  test_response_builder_models.py  test_symbol.py  test_v02_v03_v04.py
