[project]
name = "market-data-mcp"
version = "0.1.0"
description = "Unified financial market data MCP server covering US/CN/HK markets"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.3.0",
    "akshare>=1.14.0",
    "pandas-market-calendars>=4.4.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
